[package]
name = "disk-usage"
version = "0.1.0"
edition = "2021"
authors = ["Disk Usage CLI"]
description = "A disk usage visualization tool with better output than df -h"
license = "MIT OR Apache-2.0"

[dependencies]
sysinfo = "0.30"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
anyhow = "1.0"
